Changed manifest.json title name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rock, Paper, Scissors and Knife",
+  "name": "Rock, Paper, Scissors, Knife",
   "short_name": "RPS Knife",
   "description": "Rock Paper Scissors but with a twist...",
   "start_url": ".",
